# db-engines-benchmark

./: .gitignore  LICENSE  README.md
.sail/: Dockerfile
nosql/mongo/: Cargo.toml  docker-compose.yml
nosql/mongo/src/: main.rs
python/: client.py  environment.yml
schema/: dbBenchmark.xml
sql/mysql/: Cargo.toml  docker-compose.yml
sql/mysql/src/: main.rs  prepare_db.sql
sql/postgres/: Cargo.toml  docker-compose.yml
sql/postgres/src/: main.rs  prepare_db.sql
