[package]
name = "postgres"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version="0.15.2", features = ["with-uuid"] }
uuid = { version = "0.7.4", features = ["v4"] }
rust_decimal = "1.0.3"
fake = "2.2.0"
r2d2 = "0.8.5"
r2d2_postgres = "0.14.0"