[package]
name = "postgres"
version = "0.1.0"
authors = ["Simone Romano <simoneromano@tutanota.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix Server
actix-rt = "0.2"
actix-web = "1.0.7"
# Postgres db
postgres = { version="0.15.2", features = ["with-uuid"] }
r2d2 = "0.8.5"
r2d2_postgres = "0.14.0"
# UUID Support
uuid = { version = "0.5", features = ["v4", "serde"] }
# Serde JSON Serialisation/Deserialisation
serde = "1.0.101"
# Decimal support
rust_decimal = "1.0.3"
futures = "0.1.29"
env_logger = "0.6.2"